improve PwmPasswordPolicy immutabllity